# temporary_storage

./: Readme.md  pyproject.toml
1_Regresja_liniowa_i_logistyczna/: lab_1.ipynb  lab_1.py
2_Lasy_decyzyjne_i_boosting/: lab_2.ipynb  lab_2.py
3_Sieci_neuronowe/: lab_3.ipynb  lab_3.py
