[tool.poetry]
name = "sztuczna-inteligencja"
version = "0.1.0"
description = ""
authors = ["PanBard"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.3.2"
matplotlib = "^3.9.3"
pandas = "^2.2.3"
missingno = "^0.5.2"
scikit-learn = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
